navbar error fixed

--- a/views/Error_page.ejs
+++ b/views/Error_page.ejs
@@ -11,7 +11,7 @@
     <title>Weather</title>
 </head>
 <body style="background-color: rgb(199, 235, 233);">
-    <nav id="nav-background-color" class="navbar navbar-expand-lg navbar-light">
+    <nav id="nav-background-color" class="navbar navbar-expand navbar-light">
         <div class="container-fluid" >
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
