navbar error fixed

--- a/views/Weather_information.ejs
+++ b/views/Weather_information.ejs
@@ -11,7 +11,7 @@
     <title>Weather</title>
 </head>
 <body id="body" style="background-image: url('WeatherApp_Img/weatherappbackground.png');">
-    <nav id="nav-background-color" class="navbar navbar-expand-lg navbar-light">
+    <nav id="nav-background-color" class="navbar navbar-expand navbar-light">
         <div class="container-fluid" >
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
